--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -17,7 +17,6 @@ jobs:
       with:
         java-version: 1.8
   
-    
     - run: zip -r veracode-scan-target.zip ./ 
 
     - name: Get the Java API wrapper
@@ -26,4 +25,4 @@ jobs:
         args: -sS -o VeracodeJavaAPI.jar "https://repo1.maven.org/maven2/com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/19.6.5.8/vosp-api-wrappers-java-19.6.5.8.jar"
 
     - name: Start SAST scan
-      run: java -jar VeracodeJavaAPI.jar -action uploadandscan -vid "${{secrets.VERACODE_API_ID}}" -vkey "${{secrets.VERACODE_API_KEY}}" -appname Github-VVscan -createprofile true -version "GitHub Actions job $GITHUB_RUN_NUMBER" -filepath ./veracode-scan-target.zip
+      run: java -jar VeracodeJavaAPI.jar -action uploadandscan -vid "${{secrets.VERACODE_API_ID}}" -vkey "${{secrets.VERACODE_API_KEY}}" -appname Github-Mayank-SCA-scan -createprofile true -version "GitHub Actions job $GITHUB_RUN_NUMBER" -filepath ./veracode-scan-target.zip
